# ing

./: .gitignore  CMakeLists.bk.txt  CMakeLists.txt  README.md  imgui.ini
assets/shaders/: frag.spv  vert.spv
builld/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ing.sln  libing.vcxproj  libing.vcxproj.filters
builld/examples/: cmake_install.cmake
builld/examples/basic_app/: basic_app_gl.vcxproj  basic_app_gl.vcxproj.filters  cmake_install.cmake
builld/examples/basic_testbed/: basic_testbed.vcxproj  basic_testbed.vcxproj.filters  cmake_install.cmake  raytracer.vcxproj  raytracer.vcxproj.filters
builld/testbed/: cmake_install.cmake  testbed.vcxproj  testbed.vcxproj.filters
dependencies/: README.md
doc/notes/: directx12.md  ideas.md  initialize.md  vector_algebra.md
examples/: CMakeLists.txt
examples/basic_app/: CMakeLists.txt
examples/basic_app/dynamic/: vk_scene_main.cc  wave.cc
examples/basic_app/static/: gl_app.cc  ui.cpp  vk_hello_main.cc
examples/basic_testbed/: CMakeLists.txt  cuda_gl.cu  pure_gl.cc
examples/basic_testbed/basic/: cuda_gl.cu  cuda_gl_extent.cu  grid_map.cc  pure_gl.cc
examples/basic_testbed/raytracer/: basic_tracer.cc  basic_tracer.cu
examples/fluid/: fluid_main.cc  fluid_testbed.cuh
examples/geometry/: GeometryGenerator.cpp  geometryGenerator.cc  mygeotest.cc
examples/plain/: pure_vk.cc  pure_win.cc
examples/src/source/: frameResource.cc
examples/src/static/: box_app.cc  canvas_app.cc  shape_app.cpp  win_direct_impl.cc
examples/src/wireframe/: static_app.cc
examples/static/: box_app.cc  gl_app.cc  vk_canvas_main.cc  vk_hello_main.cc  vk_scene_main.cc
include/ing/: app.h  common.h  geometry.h  model.h  testbed.h  ui.h
include/ing/app/: gl_common.hpp  vk_canvas.hpp  vk_common.hpp  vk_hello.hpp  vk_scene.hpp  win_drx12.hpp  win_pure.hpp
include/ing/core/: GameTimer.hpp  timer.hpp
include/ing/geometry/: point.h  shape.h
include/ing/mod/: doc.hpp
include/ing/testbed/: testbed_gl.h
include/ing/utils/: common_utils.hpp
include/ing/utils/drx/: d3dapp_utils.hpp  frameResource.hpp  geometryGenerator.hpp  timer.hpp  uploadBuffer.hpp
include/ing/utils/gl/: gl_primitive.h  gl_shader.h  gl_utils.hpp
include/ing/utils/vk/: vk_utils.hpp
include/testbed/: common.h  shared_queue.h  testbed.h
include/testbed/cuda/: common_device.cuh  cuda_gl.cuh  cuda_gl.h  raytracer.cuh  raytracer.h
include/testbed/cuda/utils/: base.cuh  camera.cuh  hittable.cuh  ray.cuh  tracer.cuh  vec4.cuh  world.cuh
include/testbed/pure/: pure_gl.h
ing/: app.h  ing.h
ing/app/: win_app.cc  win_pure.cc
ing/app/win_direct/: d3dUtil.cc  d3dapp.cc
ing/app/win_gl/: gl_common.cc  glcommon.cc
ing/app/win_vulkan/: vk_canvas.cc  vk_common.cc  vk_hello.cc  vk_scene.cc  vk_tex.cc
ing/core/: timer.cc
ing/utils/: common_utils.cc  gl_shader.cc  gl_utils.cc  tbTimer.cc  vk_utils.cc
ing/utils/gl/: gl_utils.cc
ing/utils/vk/: vk_utils.cc
scripts/: compile_shaders.ps1
shaders/testbed/: shader.frag  shader.vert
testbed/: CMakeLists.txt  README.md  testbed.cc  testbed_gl.cc
testbed/source/: testbed_pure_gl.cc
testbed/source_cu/: raytracer_cuda_gl.cu  testbed_cuda_gl.cu
testbed/source_cu/utils/: base.cu  tracer.cu
